fix(user): fix user edit page notes overflow

--- a/src/pages/user/edit/UserEdit.module.less
+++ b/src/pages/user/edit/UserEdit.module.less
@@ -70,11 +70,9 @@
 }
 
 .notes {
-  display: flex;
-  align-items: center;
   margin-top: 8px;
   font-size: 13px;
-  white-space: pre;
+  white-space: pre-wrap;
   color: rgba(0, 0, 0, 0.4);
 }
 
